enhance editor panel, dispose once close, add refresh button